# infoproc-coursework

benchmarking/: benchmark.py  requirements.txt  schema.capnp
client/: data.py  main.py  state.py
client/game/: __init__.py  tempCodeRunnerFile.py
client/interfaces/: console.py  fpga.py  server.py
client/interfaces/server/: __init__.py  schema.capnp
client/old/: viz.py
client/test/: server.py
fpga/Group_Proj/: .gitignore  README.md
fpga/Group_Proj/Visualiser/: UART.py  Viz.py
fpga/Group_Proj/group_proj/: FPmult_hw.tcl  KalmanFilter.sv  bcdconverter.sv  fir.sv  fir.sv.bak  fir.v.bak  matrixmultipler.sv  mult.v  segmentdecoder  top.sv  unsaved.qsys  unsaved.sopcinfo
fpga/Group_Proj/group_proj/.qsys_edit/: preferences.xml  unsaved.xml  unsaved_schematic.nlv
fpga/Group_Proj/group_proj/unsaved/: unsaved.cmp  unsaved.html  unsaved.xml  unsaved_bb.v  unsaved_generation.rpt  unsaved_generation_previous.rpt  (+2 more)
server/: .gitignore  Cargo.toml  astroids_lobby.db  common_issues.md  create_lobby_db.sh  players.db  schema.capnp
server-network-test/: Cargo.toml  build.rs  schema.capnp
server-network-test/src/: main.rs
server/.sqlx/: query-0c0923480cfab02b0581070239f2908ffb74b7d4373434bc630311bd33a34384.json  query-abbf175e0436910454e31586b6519243892c66606cd543b6bddcc50e86b6a270.json
server/migrations/: 20240312161721_create_db.sql
server/src/: db.rs  game.rs  main.rs  net.rs
server/src/game/: entities.rs  game_params.rs  lib.rs  mod.rs  tempCodeRunnerFile.rs
server/src/lobby/: lib.rs  mod.rs  net.rs
server/src/lobby.disabled/: mod.rs  net.rs
(+1237 files in other folders)
