[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

capnp = "0.19.2"
rand = "0.8"
r2d2_sqlite = "0.24.0"
r2d2 = "0.8.10"
rusqlite = "0.31.0"

[build-dependencies]
capnpc = "0.19.0"
